--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,12 @@ $RECYCLE.BIN/
 # Thumbnails
 ._*
 
+# Optional npm cache directory
+.npm
+
+# Dependency directory
+node_modules
+
 # Files that might appear in the root of a volume
 .DocumentRevisions-V100
 .fseventsd
